# heos

./: .editorconfig  .gitignore  Cargo.toml  Dockerfile  README.md  default.nix  flake.nix  justfile  run.sh
.github/workflows/: docker-image.yml
.run/: Run heos-axum.run.xml
heos-actix/: Cargo.toml
heos-actix/configuration/: base.yaml  local.yaml
heos-actix/src/: application.rs  configuration.rs  main.rs  telemetry.rs
heos-actix/src/domain/zone/: mod.rs
heos-actix/src/routers/: mod.rs  music_source.rs
heos-actix/src/routers/api/: browse.rs  mod.rs  zones.rs
heos-actix/src/routers/home/: mod.rs
heos-actix/src/routers/style/: style.css
heos-actix/src/routers/zone/: create_group.rs  edit.rs  mod.rs
heos-actix/src/views/: home.rs  mod.rs  sources.rs
heos-actix/src/views/browse/: mod.rs
heos-api/: Cargo.toml
heos-api/src/: discover.rs  driver.rs  error.rs  lib.rs  macros.rs
heos-api/src/api/: commands.rs  mod.rs  parsers.rs
heos-api/src/connection/: discover.rs  frame.rs  mod.rs
heos-api/src/next/: mod.rs
heos-api/src/types/: browse.rs  common.rs  event.rs  group.rs  mod.rs  player.rs  system.rs
heos-axum/: Cargo.toml  style.scss
heos-axum/src/: axum_hal.rs  axum_ructe.rs  config.rs  error.rs  lib.rs  main.rs
heos-axum/src/controllers/: error.rs  login.rs  mod.rs
heos-axum/src/controllers/browse/: mod.rs  music_container.rs  music_source.rs
heos-axum/src/controllers/players/: mod.rs
heos-axum/src/controllers/zones/: mod.rs
heos-axum/src/http/: mod.rs
heos-axum/src/http/browse/: listing.rs  mod.rs
heos-axum/src/http/login/: mod.rs
heos-axum/src/models/: mod.rs  zones.rs
heos-axum/src/views/: browse.rs  media.rs  mod.rs  sources.rs  zones.rs
heos-axum/src/views/pages/: mod.rs  music_containers.rs  music_sources.rs
heos-axum/src/views/zones/: edit.rs  listing.rs
heos-axum/statics/: style.css
heos-axum/templates/: base_page.rs.html
nix/: sources.json  sources.nix
rust-hall/: Cargo.toml
rust-hall/src/: lib.rs
src/: application.rs  broadcast.rs  command.rs  configuration.rs  error.rs  index.html  lib.rs  main.rs  parsers.rs  spielwiese.rs  telemetry.rs  templates.rs  util.rs
src/api/: command_component.rs  event.rs  event_aggregator_component.rs  mod.rs  parsers.rs  state.rs
src/api/command/: get_player_state.rs  get_player_volume.rs  get_players.rs  mod.rs
src/api/connection/: discover.rs  frame.rs
src/command/: api.rs  get_player_state.rs  get_player_volume.rs  get_players.rs  mod.rs
src/command_channel/: mod.rs
src/components/: command_component.rs  event_aggregator_component.rs  event_componment.rs  mod.rs  state_component.rs
src/connection/: discover.rs  frame.rs  mod.rs
src/contoller/: event.rs  mod.rs  state.rs
src/contoller/command/: get_groups.rs  get_music_sources.rs  get_players.rs  init.rs  mod.rs  now_playing.rs  set_play_state.rs
src/contoller/command2/: get_players.rs  mod.rs
src/contoller/state2/: mod.rs
src/domain/: mod.rs
src/domain/zone/: mod.rs
src/driver/: command_handler.rs  event_hander.rs  event_handler.rs  event_loop.rs  mod.rs  state.rs  state_handler.rs
src/events/: mod.rs
src/model/: browse.rs  event.rs  group.rs  mod.rs  player.rs  system.rs  zone.rs
src/reactive/: mod.rs
src/routers/: api.rs  mod.rs  music_source.rs
src/routers/api/: mod.rs
src/routers/home/: mod.rs
src/routers/style/: mod.rs  style.css
src/routers/zone/: create_group.rs  edit.rs  mod.rs
src/spielwiese/: mod.rs
src/spielwiese2/: mod.rs
src/ui/: mod.rs
src/v2/: device.rs  mod.rs  types.rs
src/views/: home.rs  mod.rs  sources.rs  zone.rs
src2/: client.rs  heos_client.rs  main.rs
src2/api/: command_component.rs  event_componment.rs  state_component.rs
src2/model/: common.rs  event.rs  player.rs
src2/spielwiese/: mod.rs  state.rs  widgets.rs
static/: colors.css  style.css
templates/: index.html  now_playing.html  schnipsel.html  zones-zone.html  zones.html
