[package]
name = "heosd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "heosd"

[dependencies]

heos-api = {path = "heos-api"}

actix-web = "4"
actix-web-lab = "0.18"
actix-files = "0.6.2"
tera = "1.8.0"
parking_lot = "0.12"
tokio = { version = "1.13.1", features = ["sync"] }
tokio-stream = { version = "0.1.8", features = ["time"] }
futures-util = { version = "0.3.17", default-features = false, features = ["std"] }

# Read configurations. From yaml!
config = { version = "0.13", default-features = false, features = ["yaml"] }

#logging
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", default-features = false, features = ["fmt", "ansi", "env-filter", "tracing-log"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1.1"
tracing-actix-web = "0.6.2"
pretty_env_logger = "0.4.0"
log = "0.4.6"

# Errors - in an app
anyhow = "1.0.66"

serde = "1.0.147"
serde_derive = "1.0.147"
serde_json = "1.0.74"
serde_merge = "0.1.3"
serde-aux = "4.0.0"

lazy_static = "1.4.0"

#Templating
maud = "0.24.0"
